<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".signup.EmailVerificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextHeaderStyle"
            android:text="@string/VerifyEmailString"
            android:textSize="42sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/emailverify_message_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/VerifyEmailMessage"
            android:textAppearance="@style/TextInputStyle"/>

        <ProgressBar
            android:id="@+id/emailverify_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginTop="16dp"
            android:indeterminate="true"
            android:visibility="gone"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailverify_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:errorEnabled="true"
            android:visibility="gone">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/Email"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:background="@drawable/text_input_border"
                android:textAppearance="@style/TextInputStyle"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="32dp">
            <Button
                android:id="@+id/emailverify_resend_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:layout_marginRight="16dp"
                android:textAppearance="@style/TextInputStyle"
                android:text="@string/Resend"
                android:background="@drawable/button_bg_selector"
                android:textColor="@color/button_text_color"/>
            <Button
                android:id="@+id/emailverify_signin_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:textAppearance="@style/TextInputStyle"
                android:text="@string/Signin"
                android:background="@drawable/button_bg_selector"
                android:textColor="@color/button_text_color"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>