<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_activity_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".signin.LoginActivity"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/TextLogoStyle"
            android:text="Tripa"
            android:layout_marginBottom="16dp"/>

        <ProgressBar
            android:id="@+id/signin_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginBottom="16dp"
            android:indeterminate="true"
            android:visibility="invisible"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signin_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:focusable="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/Email"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:background="@drawable/text_input_border"
                android:textAppearance="@style/TextInputStyle"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signin_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"
            android:focusable="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/Password"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:background="@drawable/text_input_border"
                android:textAppearance="@style/TextInputStyle"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextInputStyle"
            android:text="Forgot Password"
            android:layout_marginTop="8dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Or sign In with"
            android:textAppearance="@style/TextInputStyle"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <androidx.cardview.widget.CardView
                android:layout_width="36dp"
                android:layout_height="36dp"
                app:cardCornerRadius="18dp"
                app:cardElevation="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/signin_fb_custom"
                        android:paddingRight="4dp"
                        android:paddingBottom="4dp"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@mipmap/fb_login_icon"
                        android:scaleType="centerCrop"/>
                    <!--com.facebook.login.widget.LoginButton
                        android:id="@+id/signin_fb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:visibility="gone"/-->
                </FrameLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="36dp"
                android:layout_height="36dp"
                app:cardCornerRadius="18dp"
                app:cardElevation="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">
                <ImageView
                    android:id="@+id/signin_google"
                    android:paddingRight="4dp"
                    android:paddingBottom="4dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@mipmap/google_login_icon"
                    android:scaleType="centerCrop"/>
            </androidx.cardview.widget.CardView>
            <!--android.support.v7.widget.CardView
                android:layout_width="36dp"
                android:layout_height="36dp"
                app:cardCornerRadius="18dp"
                app:cardElevation="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">
                <ImageView
                    android:id="@+id/signin_twitter"
                    android:paddingRight="4dp"
                    android:paddingBottom="4dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@mipmap/twitter_login_icon"
                    android:scaleType="fitXY"/>
            <-android.support.v7.widget.CardView-->
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/signin_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:textAppearance="@style/TextInputStyle"
                android:text="@string/Signin"
                android:background="@drawable/button_bg_selector"
                android:textColor="@color/button_text_color"/>
            <Button
                android:id="@+id/signup_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:textAppearance="@style/TextInputStyle"
                android:text="@string/Signup"
                android:background="@drawable/button_bg_selector"
                android:textColor="@color/button_text_color"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>